--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<div class="jumbotron">
+  <h1>My Rails Blog</h1>
+</div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +19,10 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= post.created_at.to_date %></td>
+        <td><%= link_to 'Show', post, class: 'btn btn-info' %></td>
+        <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-warning' %></td>
+        <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: 'btn btn-primary' %>
